--- a/cognito_lambda/pom.xml
+++ b/cognito_lambda/pom.xml
@@ -75,6 +75,12 @@
 
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
+            <artifactId>sqs</artifactId>
+            <version>2.20.31</version>
+        </dependency>
+
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
             <artifactId>cognitoidentityprovider</artifactId>
             <version>2.20.31</version>
         </dependency>
