--- a/cognito_lambda/pom.xml
+++ b/cognito_lambda/pom.xml
@@ -84,6 +84,11 @@
             <artifactId>cognitoidentityprovider</artifactId>
             <version>2.25.27</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
