feat: add global exception handling for max file upload size

--- a/photo_lambda/src/main/resources/application.properties
+++ b/photo_lambda/src/main/resources/application.properties
@@ -9,3 +9,6 @@ application.aws.region=${AWS_REGION:us-east-1}
 application.aws.tableName=${AWS_DYNAMODB_TABLE_NAME:photoDB}
 application.aws.stageBucketName=${AWS_S3_STAGE_BUCKET_NAME:stageBucket}
 application.aws.primaryBucketName=${AWS_S3_PRIMARY_BUCKET_NAME:primaryBucket}
+
+# pic size
+spring.servlet.multipart.max-file-size=5MB
