refactor: add DeletionPolicy: Retain to SNSNotificationTopic

--- a/template.yaml
+++ b/template.yaml
@@ -400,6 +400,8 @@ Resources:
 
   SNSNotificationTopic: # SNS for receiving notifications
     Type: AWS::SNS::Topic
+    DeletionPolicy: Retain
+    Condition: shouldCreateSharedResource
     Properties:
       TopicName: !Sub ${AWS::StackName}-SnsNotificationTopic
       DisplayName: SNS notification topic for receiving notifications
