fix: add Condition: IsPrimaryRegion to PrimaryBucket

--- a/template.yaml
+++ b/template.yaml
@@ -424,6 +424,7 @@ Resources:
 
   PrimaryBucket: # Primary S3 Bucket (for storing processed images with watermarks)
     Type: AWS::S3::Bucket
+    Condition: IsPrimaryRegion
     DeletionPolicy: Retain
     Properties:
       BucketName: !Sub ${AWS::StackName}-primary-bucket
