--- a/template.yaml
+++ b/template.yaml
@@ -76,6 +76,7 @@ Resources:
             Action:
               - s3:GetObject
               - s3:DeleteObject
+              - s3:ListBucket
               - s3:PutObject
             Resource:
               Fn::If:
