--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -148,6 +148,7 @@ jobs:
             --no-fail-on-empty-changeset \
             --role-arn ${SECONDARY_CLOUDFORMATION_EXECUTION_ROLE} \
             --parameter-overrides \
+              LogoutURL=https://main.d506j3um5uc41.amplifyapp.com \
               CognitoCallbackURL=https://main.d506j3um5uc41.amplifyapp.com/auth/callback \
               CustomDomainNamePrimary=${{secrets.CUSTOM_DOMAINNAME_PRIMARY}} \
               CustomDomainNameDR=${{ secrets.CUSTOM_DOMAINNAME_DR }} \
@@ -202,6 +203,7 @@ jobs:
             --no-fail-on-empty-changeset \
             --role-arn ${PRIMARY_CLOUDFORMATION_EXECUTION_ROLE} \
             --parameter-overrides \
+              LogoutURL=https://main.d506j3um5uc41.amplifyapp.com \
               CognitoCallbackURL=https://main.d506j3um5uc41.amplifyapp.com/auth/callback \
               CustomDomainNamePrimary=${{secrets.CUSTOM_DOMAINNAME_PRIMARY}} \
               CustomDomainNameDR=${{ secrets.CUSTOM_DOMAINNAME_DR }} \
