fix: add s3:GetObject action to generate preSigned url

--- a/template.yaml
+++ b/template.yaml
@@ -367,6 +367,7 @@ Resources:
             Effect: Allow
             Action:
               - s3:PutObject
+              - s3:GetObject
             Resource:
               Fn::If:
                 - IsPrimaryRegion
